# chip8-emulator

./: Cargo.toml  README.md
src/: chip8.rs  lib.rs  main.rs  sdl_platform.rs
tests/: display.rs
