[package]
name = "chip8-emulator"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "chip8-emulator"
test = false

[dependencies]
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["bundled"] }

[dev-dependencies]
assert_hex = "0.2.2"
